--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <!-- Testimonio Diego -->
                         <div class="col-8 col-lg-3">
                             <div class="text-center card-person__testimonio">
-                                <img class="card-person__img-other" src="assets/images/users-08.webp"
+                                <img class="card-person__img-other-testimonio" src="assets/images/users-08.webp"
                                     alt="Icono persona">
                                 <h4 class="card-person__title-testimonio">Diego</h4>
                                 <p>“Muchas gracias, sin duda <br> son la mejor página. <br> Todos sus
@@ -207,7 +207,7 @@
                         <!-- Testimonio Sofia -->
                         <div class="col-8 col-lg-3">
                             <div class="text-center card-person__testimonio">
-                                <img class="card-person__img-other" src="assets/images/users-01.webp"
+                                <img class="card-person__img-other-testimonio" src="assets/images/users-01.webp"
                                     alt="Icono persona">
                                 <h4 class="text-center card-person__title-testimonio fontBold">Sofía</h4>
                                 <p class="fontNormal">“Gracias Enlazar por <br> darme una mano con mi <br> CV, increible
@@ -217,7 +217,7 @@
                         <!-- Testimonio Jona -->
                         <div class="col-8 col-lg-3">
                             <div class="text-center card-person__testimonio">
-                                <img class="card-person__img-other" src="assets/images/users-05.webp"
+                                <img class="card-person__img-other-testimonio" src="assets/images/users-05.webp"
                                     alt="Icono persona">
                                 <h4 class="card-person__title-testimonio">Jona</h4>
                                 <p>“Les agradezco por la <br> buena onda y el gran <br> trabajo”
@@ -235,7 +235,7 @@
                             <!-- Testimonio Diego -->
                             <div class="col-8 col-lg-3">
                                 <div class="text-center card-person__testimonio">
-                                    <img class="card-person__img-other" src="assets/images/users-07.webp"
+                                    <img class="card-person__img-other-testimonio" src="assets/images/users-07.webp"
                                         alt="Icono persona">
                                     <h4 class="card-person__title-testimonio">Diego</h4>
                                     <p>“Me fue bien en la entrevista, <br> me llamaron y arranco en
@@ -246,7 +246,7 @@
                             <!-- Testimonio Nicolas -->
                             <div class="col-8 col-lg-3">
                                 <div class="text-center card-person__testimonio">
-                                    <img class="card-person__img-other" src="assets/images/users-06.webp"
+                                    <img class="card-person__img-other-testimonio" src="assets/images/users-06.webp"
                                         alt="Icono persona">
                                     <h4 class="text-center card-person__title-testimonio">Nicolas</h4>
                                     <p>"Muy buena la información <br> que comparten, ayuda a <br> mucha gente"</p>
@@ -255,7 +255,7 @@
                             <!-- Testimonio Florencia -->
                             <div class="col-8 col-lg-3">
                                 <div class="text-center card-person__testimonio">
-                                    <img class="card-person__img-other" src="assets/images/users-04.webp"
+                                    <img class="card-person__img-other-testimonio" src="assets/images/users-04.webp"
                                         alt="Icono persona">
                                     <h4 class="text-center card-person__title-testimonio">Florencia</h4>
                                     <p>"Que buen material! <br> Agradezco estar acá"</p>
@@ -273,7 +273,7 @@
                             <!-- Testimonio Juan Pablos -->
                             <div class="col-8 col-lg-3">
                                 <div class="text-center card-person__testimonio">
-                                    <img class="card-person__img-other" src="assets/images/users-05.webp"
+                                    <img class="card-person__img-other-testimonio" src="assets/images/users-05.webp"
                                         alt="Icono persona">
 
                                     <h4 class="card-person__title-testimonio">Juan Pablo</h4>
@@ -286,7 +286,7 @@
                             <!-- Testimonio George -->
                             <div class="col-8 col-lg-3">
                                 <div class="text-center card-person__testimonio">
-                                    <img class="card-person__img-other" src="assets/images/users-07.webp"
+                                    <img class="card-person__img-other-testimonio" src="assets/images/users-07.webp"
                                         alt="Icono persona">
 
                                     <h4 class="text-center card-person__title-testimonio">George</h4>
@@ -296,7 +296,7 @@
                             <!-- Testimonio Rosmily -->
                             <div class="col-8 col-lg-3">
                                 <div class="text-center card-person__testimonio">
-                                    <img class="card-person__img-other" src="assets/images/users-03.webp"
+                                    <img class="card-person__img-other-testimonio" src="assets/images/users-03.webp"
                                         alt="Icono persona">
 
                                     <h4 class="text-center card-person__title-testimonio">Rosmily</h4>
@@ -316,7 +316,7 @@
                             <!-- Testimonio Florencia -->
                             <div class="col-8 col-lg-3">
                                 <div class="text-center card-person__testimonio">
-                                    <img class="card-person__img-other" src="assets/images/users-02.webp"
+                                    <img class="card-person__img-other-testimonio" src="assets/images/users-02.webp"
                                         alt="Icono persona">
 
                                     <h4 class="card-person__title-testimonio">Florencia
@@ -330,7 +330,7 @@
                             <!-- Testimonio Matias -->
                             <div class="col-8 col-lg-3">
                                 <div class="text-center card-person__testimonio">
-                                    <img class="card-person__img-other" src="assets/images/users-06.webp"
+                                    <img class="card-person__img-other-testimonio" src="assets/images/users-06.webp"
                                         alt="Icono persona">
 
                                     <h4 class="text-center card-person__title-testimonio">Matias</h4>
@@ -340,7 +340,7 @@
                             <!-- Testimonio Camila -->
                             <div class="col-8 col-lg-3">
                                 <div class="text-center card-person__testimonio">
-                                    <img class="card-person__img-other" src="assets/images/users-03.webp"
+                                    <img class="card-person__img-other-testimonio" src="assets/images/users-03.webp"
                                         alt="Icono persona">
 
                                     <h4 class="text-center card-person__title-testimonio">Camila
@@ -362,7 +362,7 @@
                             <!-- Testimonio Matias -->
                             <div class="col-8 col-lg-3">
                                 <div class="text-center card-person__testimonio">
-                                    <img class="card-person__img-other" src="assets/images/users-08.webp"
+                                    <img class="card-person__img-other-testimonio" src="assets/images/users-08.webp"
                                         alt="Icono persona">
 
                                     <h4 class="card-person__title-testimonio">Matias
@@ -376,7 +376,7 @@
                             <!-- Testimonio Yoana -->
                             <div class="col-8 col-lg-3">
                                 <div class="text-center card-person__testimonio">
-                                    <img class="card-person__img-other" src="assets/images/users-01.webp"
+                                    <img class="card-person__img-other-testimonio" src="assets/images/users-01.webp"
                                         alt="Icono persona">
                                     <h4 class="text-center card-person__title-testimonio">Yoana</h4>
                                     <p>“Contraté el servicio de elaboración de cv con devolución personalizada
@@ -408,7 +408,7 @@
                         <!-- Testimonio Diego -->
                         <div class="col-8 col-lg-3">
                             <div class="text-center card-person__testimonio">
-                                <img class="card-person__img-other" src="assets/images/users-08.webp"
+                                <img class="card-person__img-other-testimonio" src="assets/images/users-08.webp"
                                     alt="Icono persona">
                                 <h4 class="card-person__title-testimonio">Diego</h4>
                                 <p>“Muchas gracias, sin duda <br> son la mejor página. <br> Todos sus
@@ -426,7 +426,7 @@
                         <!-- Testimonio Sofia -->
                         <div class="col-8 col-lg-3">
                             <div class="text-center card-person__testimonio">
-                                <img class="card-person__img-other" src="assets/images/users-01.webp"
+                                <img class="card-person__img-other-testimonio" src="assets/images/users-01.webp"
                                     alt="Icono persona">
                                 <h4 class="text-center card-person__title-testimonio fontBold">Sofía</h4>
                                 <p class="fontNormal">“Gracias Enlazar por <br> darme una mano con mi <br> CV, increible
@@ -443,7 +443,7 @@
                         <!-- Testimonio Jona -->
                         <div class="col-8 col-lg-3">
                             <div class="text-center card-person__testimonio">
-                                <img class="card-person__img-other" src="assets/images/users-05.webp"
+                                <img class="card-person__img-other-testimonio" src="assets/images/users-05.webp"
                                     alt="Icono persona">
                                 <h4 class="card-person__title-testimonio">Jona</h4>
                                 <p>“Les agradezco por la <br> buena onda y el gran <br> trabajo”
@@ -460,7 +460,7 @@
                         <!-- Testimonio Diego -->
                         <div class="col-8 col-lg-3">
                             <div class="text-center card-person__testimonio">
-                                <img class="card-person__img-other" src="assets/images/users-07.webp"
+                                <img class="card-person__img-other-testimonio" src="assets/images/users-07.webp"
                                     alt="Icono persona">
                                 <h4 class="card-person__title-testimonio">Diego</h4>
                                 <p>“Me fue bien en la entrevista, <br> me llamaron y arranco en
@@ -478,7 +478,7 @@
                         <!-- Testimonio Nicolas -->
                         <div class="col-8 col-lg-3">
                             <div class="text-center card-person__testimonio">
-                                <img class="card-person__img-other" src="assets/images/users-06.webp"
+                                <img class="card-person__img-other-testimonio" src="assets/images/users-06.webp"
                                     alt="Icono persona">
                                 <h4 class="text-center card-person__title-testimonio">Nicolas</h4>
                                 <p>"Muy buena la información <br> que comparten, ayuda a <br> mucha gente"</p>
@@ -494,7 +494,7 @@
                         <!-- Testimonio Florencia -->
                         <div class="col-8 col-lg-3">
                             <div class="text-center card-person__testimonio">
-                                <img class="card-person__img-other" src="assets/images/users-04.webp"
+                                <img class="card-person__img-other-testimonio" src="assets/images/users-04.webp"
                                     alt="Icono persona">
                                 <h4 class="text-center card-person__title-testimonio">Florencia</h4>
                                 <p>"Que buen material! <br> Agradezco estar acá"</p>
@@ -510,7 +510,7 @@
                         <!-- Testimonio Juan Pablos -->
                         <div class="col-8 col-lg-3">
                             <div class="text-center card-person__testimonio">
-                                <img class="card-person__img-other" src="assets/images/users-05.webp"
+                                <img class="card-person__img-other-testimonio" src="assets/images/users-05.webp"
                                     alt="Icono persona">
 
                                 <h4 class="card-person__title-testimonio">Juan Pablo</h4>
@@ -530,7 +530,7 @@
                         <!-- Testimonio George -->
                         <div class="col-8 col-lg-3">
                             <div class="text-center card-person__testimonio">
-                                <img class="card-person__img-other" src="assets/images/users-07.webp"
+                                <img class="card-person__img-other-testimonio" src="assets/images/users-07.webp"
                                     alt="Icono persona">
 
                                 <h4 class="text-center card-person__title-testimonio">George</h4>
@@ -547,7 +547,7 @@
                         <!-- Testimonio Rosmily -->
                         <div class="col-8 col-lg-3">
                             <div class="text-center card-person__testimonio">
-                                <img class="card-person__img-other" src="assets/images/users-03.webp"
+                                <img class="card-person__img-other-testimonio" src="assets/images/users-03.webp"
                                     alt="Icono persona">
 
                                 <h4 class="text-center card-person__title-testimonio">Rosmily</h4>
@@ -565,7 +565,7 @@
                         <!-- Testimonio Florencia -->
                         <div class="col-8 col-lg-3">
                             <div class="text-center card-person__testimonio">
-                                <img class="card-person__img-other" src="assets/images/users-02.webp"
+                                <img class="card-person__img-other-testimonio" src="assets/images/users-02.webp"
                                     alt="Icono persona">
 
                                 <h4 class="card-person__title-testimonio">Florencia
@@ -586,7 +586,7 @@
                         <!-- Testimonio Matias -->
                         <div class="col-8 col-lg-3">
                             <div class="text-center card-person__testimonio">
-                                <img class="card-person__img-other" src="assets/images/users-06.webp"
+                                <img class="card-person__img-other-testimonio" src="assets/images/users-06.webp"
                                     alt="Icono persona">
 
                                 <h4 class="text-center card-person__title-testimonio">Matias</h4>
@@ -603,7 +603,7 @@
                         <!-- Testimonio Camila -->
                         <div class="col-8 col-lg-3">
                             <div class="text-center card-person__testimonio">
-                                <img class="card-person__img-other" src="assets/images/users-03.webp"
+                                <img class="card-person__img-other-testimonio" src="assets/images/users-03.webp"
                                     alt="Icono persona">
 
                                 <h4 class="text-center card-person__title-testimonio">Camila
@@ -623,7 +623,7 @@
                         <!-- Testimonio Matias -->
                         <div class="col-8 col-lg-3">
                             <div class="text-center card-person__testimonio">
-                                <img class="card-person__img-other" src="assets/images/users-08.webp"
+                                <img class="card-person__img-other-testimonio" src="assets/images/users-08.webp"
                                     alt="Icono persona">
 
                                 <h4 class="card-person__title-testimonio">Matias
@@ -644,7 +644,7 @@
                         <!-- Testimonio Yoana -->
                         <div class="col-8 col-lg-3">
                             <div class="text-center card-person__testimonio">
-                                <img class="card-person__img-other" src="assets/images/users-01.webp"
+                                <img class="card-person__img-other-testimonio" src="assets/images/users-01.webp"
                                     alt="Icono persona">
                                 <h4 class="text-center card-person__title-testimonio">Yoana</h4>
                                 <p>“Contraté el servicio de elaboración de cv con devolución personalizada
