--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
                 <input type="hidden" name="_subject" value="Consulta">
                 <input type="hidden" name="_template" value="box">
                 <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_next" value="https://google.com.ar">
+                <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/">
             </form>
         </div>
 
