--- a/pages/cursos-talleres.html
+++ b/pages/cursos-talleres.html
@@ -420,7 +420,7 @@
                         <input type="hidden" name="_subject" value="Curso:  Webinars & Workshops">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -675,7 +675,7 @@
                         <input type="hidden" name="_subject" value="Curso: Introducción a la selección de personal">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -719,7 +719,7 @@
                         <input type="hidden" name="_subject" value="Curso: Selección de personal profesional">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -802,7 +802,7 @@
                         <p class="modal-body__paragraph-method">Metodología</p>
                         <ul class="modal-body__list">
                             <li>
-                                Virtual sincrónico mediante plataforma Google Meet - Zoom. ONLINE.
+                                Virtual sincrónico mediante plataforma Zoom. ONLINE.
                             </li>
                             <li>
                                 Material de estudio propio.
@@ -866,7 +866,7 @@
                         <input type="hidden" name="_subject" value="Curso: Selección de personal IT">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -1141,7 +1141,7 @@
                         <input type="hidden" name="_subject" value="Curso: Coaching Introducción y práctica">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -1185,7 +1185,7 @@
                         <input type="hidden" name="_subject" value="Curso: Coaching especializado">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -1311,7 +1311,7 @@
                         <input type="hidden" name="_subject" value="Curso: Orientación vocacional & Ocupacional">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -1445,7 +1445,7 @@
                         <input type="hidden" name="_subject" value="Curso: Metodologías ágiles">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -1583,7 +1583,7 @@
                         <input type="hidden" name="_subject" value="Curso: Inserción laboral & Perfil profesional">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -1842,7 +1842,7 @@
                         <input type="hidden" name="_subject" value="Curso: Asistente de Recursos Humanos">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -1885,7 +1885,7 @@
                         <input type="hidden" name="_subject" value="Curso: Recursos Humanos">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -2021,7 +2021,7 @@
                         <input type="hidden" name="_subject" value="Curso: Liderazgo & Gestión de equipos">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -2157,7 +2157,7 @@
                         <input type="hidden" name="_subject" value="Curso: Inteligencia emocional">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -2297,7 +2297,7 @@
                         <input type="hidden" name="_subject" value="Curso: PNL Programación neurolingüística">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
