--- a/pages/empresas.html
+++ b/pages/empresas.html
@@ -301,7 +301,7 @@
                         <input type="hidden" name="_subject" value="Servicio: Reclutamiento y selección">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/empresas.html">
                     </form>
                 </div>
             </div>
@@ -346,7 +346,7 @@
                         <input type="hidden" name="_subject" value="Servicio: Selección de personal IT">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/empresas.html">
                     </form>
                 </div>
             </div>
@@ -392,7 +392,7 @@
                         <input type="hidden" name="_subject" value="Servicio: Capacitaciones">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/empresas.html">
                     </form>
                 </div>
             </div>
@@ -438,7 +438,7 @@
                         <input type="hidden" name="_subject" value="Servicio: Formación y desarrollo">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/empresas.html">
                     </form>
                 </div>
             </div>
@@ -484,7 +484,7 @@
                         <input type="hidden" name="_subject" value="Servicio: Evaluaciones de desempeño">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/empresas.html">
                     </form>
                 </div>
             </div>
@@ -530,7 +530,7 @@
                         <input type="hidden" name="_subject" value="Servicio: Performance management">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/empresas.html">
                     </form>
                 </div>
             </div>
@@ -576,7 +576,7 @@
                         <input type="hidden" name="_subject" value="Servicio: Consultoría RRHH">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/empresas.html">
                     </form>
                 </div>
             </div>
@@ -622,7 +622,7 @@
                         <input type="hidden" name="_subject" value="Servicio: Evaluaciones psicotécnicas e informes">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/empresas.html">
                     </form>
                 </div>
             </div>
@@ -668,7 +668,7 @@
                         <input type="hidden" name="_subject" value="Servicio: Outplacement (Empresas)">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/empresas.html">
                     </form>
                 </div>
             </div>
