--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -537,7 +537,7 @@
                         <input type="hidden" name="_subject" value="Talentos">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/nosotros.html">
                     </form>
                 </div>
                 <!-- <div class="modal-footer__trabaja-nosotros">
