--- a/pages/particulares.html
+++ b/pages/particulares.html
@@ -304,7 +304,7 @@
                     <input type="hidden" name="_subject" value="Servicio: Elaboración de CV">
                     <input type="hidden" name="_template" value="box">
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="https://google.com.ar">
+                    <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/particulares.html">
                 </form>
             </div>
         </div>
@@ -349,7 +349,7 @@
                     <input type="hidden" name="_subject" value="Servicio: Preparación para entrevistas">
                     <input type="hidden" name="_template" value="box">
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="https://google.com.ar">
+                    <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/particulares.html">
                 </form>
             </div>
         </div>
@@ -394,7 +394,7 @@
                     <input type="hidden" name="_subject" value="Servicio: Coaching">
                     <input type="hidden" name="_template" value="box">
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="https://google.com.ar">
+                    <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/particulares.html">
                 </form>
             </div>
         </div>
@@ -439,7 +439,7 @@
                     <input type="hidden" name="_subject" value="Servicio: Orientación vocacional y ocupacional">
                     <input type="hidden" name="_template" value="box">
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="https://google.com.ar">
+                    <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/particulares.html>
                 </form>
             </div>
         </div>
@@ -484,7 +484,7 @@
                     <input type="hidden" name="_subject" value="Servicio: Perfil profesional en redes">
                     <input type="hidden" name="_template" value="box">
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="https://google.com.ar">
+                    <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/particulares.html">
                 </form>
             </div>
         </div>
@@ -529,7 +529,7 @@
                     <input type="hidden" name="_subject" value="Servicio: Inserción laboral">
                     <input type="hidden" name="_template" value="box">
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="https://google.com.ar">
+                    <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/particulares.html">
                 </form>
             </div>
         </div>
@@ -574,7 +574,7 @@
                     <input type="hidden" name="_subject" value="Servicio: Autoconocimiento profesional">
                     <input type="hidden" name="_template" value="box">
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="https://google.com.ar">
+                    <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/particulares.html">
                 </form>
             </div>
         </div>
@@ -619,7 +619,7 @@
                     <input type="hidden" name="_subject" value="Servicio: Acompañamiento en el mercado laboral para personas con capacidades diferenciales">
                     <input type="hidden" name="_template" value="box">
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="https://google.com.ar">
+                    <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/particulares.html">
                 </form>
             </div>
         </div>
@@ -664,7 +664,7 @@
                     <input type="hidden" name="_subject" value="Servicio: Outplacement (Particulares)">
                     <input type="hidden" name="_template" value="box">
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="https://google.com.ar">
+                    <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/particulares.html">
                 </form>
             </div>
         </div>
