--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -194,7 +194,7 @@
                         <input type="hidden" name="_subject" value="Revisión de CV">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://google.com.ar">
+                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/servicios.html">
                     </form>
                 </div>
             </div>
