--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <meta name="msapplication-TileImage" content="assets/images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#34668a">
     <!-- Open Graph Protocol -->
+    <meta name="twitter:card" content="summary"></meta>
     <meta property="og:title" content="Consultora Enlazar" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://consultoraenlazar.com.ar" />
