image fixed ogp

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta property="og:title" content="Consultora Enlazar" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://consultoraenlazar.com.ar" />
-    <meta property="og:image" content="https://consultoraenlazar.com.ar/assets/images/logo-ogp-whatsapp.png" />
+    <meta property="og:image" content="https://consultoraenlazar.com.ar/assets/images/logo-enlazar-ogp.jpg" />
     <!-- CSS BOOTSTRAP -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- CSS CUSTOM -->
