--- a/pages/cursos-capacitaciones.html
+++ b/pages/cursos-capacitaciones.html
@@ -140,7 +140,7 @@
     <!-- Seccion de CARDS de cursos y capacitaciones -->
     <section class="section-cards__container container-fluid">
         <h3 class="text-center fw-bold mb-5">Todo lo que vas a encontrar:</h2>
-        <div class="swiper mySwiper">
+        <div class="w-75 swiper mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="card-webinars card text-center" style="width: 18rem;">
